compiler/tests/success/noextract/x86-64/empty.jazz
fn return_uninit() -> reg u64 {
  reg u64 res;
  return res;
}
