compiler/tests/fail/stack_allocation/x86-64/uninit_stack.jazz
export
fn f () -> reg u64 {
  stack u64 s1;
  reg u64 res;

  res = s1;

  return res;
}
